# mpilot

./: .buildinfo  .gitignore  LICENSE  Pipfile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sitemap.xml
.github/workflows/: docs.yml  python-package.yml  python-publish.yml
_sources/developer/: index.rst.txt
_sources/developer/guides/: creating-commands.rst.txt  index.rst.txt  working-with-models.rst.txt
_sources/developer/reference/: commands.rst.txt  exceptions.rst.txt  index.rst.txt  params.rst.txt  program.rst.txt
_sources/user/: index.rst.txt  lib-eems-basic.rst.txt  lib-eems-fuzzy.rst.txt  lib-eems-netcdf.rst.txt  libraries-ref.rst.txt
developer/: index.html
developer/guides/: creating-commands.html  creating-parameters.html  index.html  working-with-models.html
developer/reference/: arguments.html  commands.html  exceptions.html  index.html  params.html  parser.html  program.html
docs/: conf.py  index.rst
docs/developer/: index.rst
docs/developer/guides/: creating-parameters.rst  working-with-models.rst
docs/developer/reference/: arguments.rst  commands.rst  exceptions.rst  params.rst  parser.rst  program.rst
docs/user/: index.rst  lib-eems-basic.rst  lib-eems-csv.rst  lib-eems-fuzzy.rst
mpilot/: __init__.py  arguments.py  commands.py  exceptions.py  params.py  program.py  utils.py
mpilot/cli/: mpilot.py
mpilot/libraries/eems/: basic.py  csv_io.py  exceptions.py  fuzzy.py  mixins.py
mpilot/libraries/eems/csv/: io.py
mpilot/libraries/eems/netcdf/: exceptions.py  io.py
mpilot/parser/: parser.py  parsetab.py
tests/: test_parser.py  test_program.py  utils.py
tests/eems/: test_basic.py  test_csv_io.py  test_fuzzy.py  test_netcdf_io.py
tests/eems/data/: netcdf_test.nc
user/: index.html  lib-eems-basic.html  lib-eems-csv.html  lib-eems-fuzzy.html  lib-eems-netcdf.html  libraries-ref.html
