[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["parsetab.py"]

[tool.poetry]
name = "mpilot"
version = "1.3.1"
description = "MPilot is a plugin-based, environmental modeling framework"
authors = ["Conservation Biology Institute"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/consbio/mpilot"
homepage = "https://consbio.github.io/mpilot/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
packages = [
    { include = "mpilot"}
]

[tool.poetry.dependencies]
python = ">=3.11"
ply = "^3.11"
six = "*"
click = "^8.0.4"
numpy = "^2.3.5"
netCDF4 = [
    { version = "^1.7.2", python = ">=3.11", optional = true }
]
cftime = [
    { version = "^1.6.4", optional = true }
]

[tool.poetry.extras]
netcdf = ["netCDF4", "cftime"]

[tool.poetry.scripts]
mpilot = 'mpilot.cli.mpilot:main'

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.3"
sphinx = "^8.2.3"
sphinx-material = "^0.0.36"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

